Add Exam Details page

--- a/src/QuizH/Views/Exam/Index.cshtml
+++ b/src/QuizH/Views/Exam/Index.cshtml
@@ -7,7 +7,7 @@
 
         @foreach (var exam in Model.Exams)
             {
-            <tr><td>@exam.Title</td><td>@exam.Course</td></tr>
+            <tr><td>@exam.Title</td><td>@exam.Course</td><td>@Html.ActionLink("Details", "Details", new { title = exam.Title })</td></tr>
         }
     </tbody>
 </table>
