--- a/src/QuizH/Views/Exam/Index.cshtml
+++ b/src/QuizH/Views/Exam/Index.cshtml
@@ -6,8 +6,13 @@
     <tbody>
 
         @foreach (var exam in Model.Exams)
-            {
-            <tr><td>@exam.Title</td><td>@exam.Course</td><td>@Html.ActionLink("Details", "Details", new { title = exam.Title })</td></tr>
+        {
+            <tr>
+                <td>@exam.Title</td>
+                <td>@exam.Course</td>
+                <td>@Html.ActionLink("Edit", "Edit", new { title = exam.Title })</td>
+                <td>@Html.ActionLink("Details", "Details", new {title = exam.Title})</td>
+            </tr>
         }
     </tbody>
 </table>
