Fix login and subcribe page

--- a/src/QuizH/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/src/QuizH/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-@model ExternalLoginConfirmationViewModel
+@model QuizH.Models.AccountViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewData["Title"] = "Register";
 }
