--- a/src/QuizH/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/src/QuizH/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-@model VerifyPhoneNumberViewModel
+@model QuizH.Models.ManageViewModels.VerifyPhoneNumberViewModel
 @{
     ViewData["Title"] = "Verify Phone Number";
 }
