--- a/src/QuizH/Views/Account/Login.cshtml
+++ b/src/QuizH/Views/Account/Login.cshtml
@@ -1,8 +1,8 @@
 @using System.Collections.Generic
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
-@model LoginViewModel
-@inject SignInManager<ApplicationUser> SignInManager
+@model QuizH.Models.AccountViewModels.LoginViewModel
+@inject SignInManager<QuizH.Models.ApplicationUser> SignInManager
 
 @{
     ViewData["Title"] = "Log in";
