--- a/src/QuizH/Views/Account/SendCode.cshtml
+++ b/src/QuizH/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-@model SendCodeViewModel
+@model QuizH.Models.AccountViewModels.SendCodeViewModel
 @{
     ViewData["Title"] = "Send Verification Code";
 }
