--- a/src/QuizH/Views/Manage/SetPassword.cshtml
+++ b/src/QuizH/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-@model SetPasswordViewModel
+@model QuizH.Models.ManageViewModels.SetPasswordViewModel
 @{
     ViewData["Title"] = "Set Password";
 }
