Move ViewModels to own folder

--- a/src/QuizH/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/src/QuizH/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-@model QuizH.Models.AccountViewModels.ExternalLoginConfirmationViewModel
+@model QuizH.ViewModels.Account.ExternalLoginConfirmationViewModel
 @{
     ViewData["Title"] = "Register";
 }
