--- a/src/QuizH/Views/Account/ForgotPassword.cshtml
+++ b/src/QuizH/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-@model QuizH.Models.AccountViewModels.ForgotPasswordViewModel
+@model QuizH.ViewModels.Account.ForgotPasswordViewModel
 @{
     ViewData["Title"] = "Forgot your password?";
 }
