--- a/src/QuizH/Views/Account/Login.cshtml
+++ b/src/QuizH/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 @using System.Collections.Generic
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
-@model QuizH.Models.AccountViewModels.LoginViewModel
+@model QuizH.ViewModels.Account.LoginViewModel
 @inject SignInManager<QuizH.Models.ApplicationUser> SignInManager
 
 @{
