--- a/src/QuizH/Views/Account/Register.cshtml
+++ b/src/QuizH/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-@model QuizH.Models.AccountViewModels.RegisterViewModel
+@model QuizH.ViewModels.Account.RegisterViewModel
 @{
     ViewData["Title"] = "Register";
 }
