--- a/src/QuizH/Views/Account/ResetPassword.cshtml
+++ b/src/QuizH/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-@model QuizH.Models.AccountViewModels.ResetPasswordViewModel
+@model QuizH.ViewModels.Account.ResetPasswordViewModel
 @{
     ViewData["Title"] = "Reset password";
 }
