--- a/src/QuizH/Views/Account/SendCode.cshtml
+++ b/src/QuizH/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-@model QuizH.Models.AccountViewModels.SendCodeViewModel
+@model QuizH.ViewModels.Account.SendCodeViewModel
 @{
     ViewData["Title"] = "Send Verification Code";
 }
