--- a/src/QuizH/Views/Account/VerifyCode.cshtml
+++ b/src/QuizH/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-@model QuizH.Models.AccountViewModels.VerifyCodeViewModel
+@model QuizH.ViewModels.Account.VerifyCodeViewModel
 @{
     ViewData["Title"] = "Verify";
 }
