--- a/src/QuizH/Views/Manage/AddPhoneNumber.cshtml
+++ b/src/QuizH/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-@model QuizH.Models.ManageViewModels.AddPhoneNumberViewModel
+@model QuizH.ViewModels.Manage.AddPhoneNumberViewModel
 @{
     ViewData["Title"] = "Add Phone Number";
 }
