--- a/src/QuizH/Views/Manage/ChangePassword.cshtml
+++ b/src/QuizH/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-@model QuizH.Models.ManageViewModels.ChangePasswordViewModel
+@model QuizH.ViewModels.Manage.ChangePasswordViewModel
 @{
     ViewData["Title"] = "Change Password";
 }
