--- a/src/QuizH/Views/Manage/Index.cshtml
+++ b/src/QuizH/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-@model QuizH.Models.ManageViewModels.IndexViewModel
+@model QuizH.ViewModels.Manage.IndexViewModel
 @{
     ViewData["Title"] = "Manage your account";
 }
