--- a/src/QuizH/Views/Manage/ManageLogins.cshtml
+++ b/src/QuizH/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-@model QuizH.Models.ManageViewModels.ManageLoginsViewModel
+@model QuizH.ViewModels.Manage.ManageLoginsViewModel
 @using Microsoft.AspNetCore.Http.Authentication
 @{
     ViewData["Title"] = "Manage your external logins";
