Add Professor management page

--- a/src/QuizH/Views/Exam/Edit.cshtml
+++ b/src/QuizH/Views/Exam/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model QuizH.ViewModels.EditExamViewModel
+﻿@model QuizH.ViewModels.Exam.EditExamViewModel
 
 <form asp-controller="Exam" asp-action="Edit" method="post">
     <div class="form-group">
