--- a/src/QuizH/Views/Exam/Index.cshtml
+++ b/src/QuizH/Views/Exam/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model QuizH.ViewModels.ExamListViewModel
+﻿@model QuizH.ViewModels.Exam.ExamListViewModel
 
 
 <table class="table table-striped">
