--- a/src/QuizH/Views/Exam/Insert.cshtml
+++ b/src/QuizH/Views/Exam/Insert.cshtml
@@ -25,33 +25,44 @@
                     Questions
 
                 </label>
+                <table>
+                    <thead>
+                        <tr><th>Id</th><th>Question</th></tr>
+                    </thead>
+                    <tbody data-bind="foreach: selectedQuestions">
+                        <tr>
+                            <td data-bind="text: id"></td>
+                            <td data-bind="text: text"></td>
+                        </tr>
+                    </tbody>
+                </table>
+
             </div>
             <input type="submit" class="btn btn-default" />
         </form>
     </div>
     <div class="col-md-6">
-        @foreach (var question in Model.AvailableQuestions)
-        {
-            <div class="row">
-                <div class="col-md-1">
-                    @question.Key
-                </div>
-                <div class="col-md-11">
-                    @question.Value
-                </div>
-            </div>
-
-        }
+        <table>
+            <thead>
+                <tr><th>Id</th><th>Question</th></tr>
+            </thead>
+            <tbody data-bind="foreach: availableQuestions">
+                <tr>
+                    <td data-bind="text: id"></td>
+                    <td data-bind="text: text"></td>
+                    <td><a href="#" data-bind="click: function(){$parent.selectQuestion($index);}">Select</a></td>
+                </tr>
+            </tbody>
+        </table>
 
     </div>
 </div>
 
 
 @section Scripts {
-    <script src="~/lib/knockout/build/knockout-raw.js"></script>
-    <script src="~/js/Exam.js" asp-append-version="true"></script>
+
+    @*<script src="~/js/Exam.js" asp-append-version="true"></script>*@
     <script type="text/javascript">
-        var vm = @Json.Serialize(Model.AvailableQuestions)
-        ko.applyBindings(vm);
+        require(["../js/Exam"])
     </script>
 }
