--- a/src/QuizH/Views/Shared/_Layout.cshtml
+++ b/src/QuizH/Views/Shared/_Layout.cshtml
@@ -61,8 +61,11 @@
                 asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
                 asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
         </script>
-        <script src="~/lib/knockout/dist/knockout.js"></script>
+
     </environment>
+    <script src="~/lib/knockout/dist/knockout.js"></script>
+    <script src="~/lib/requirejs/require.js"></script>
+    <script src="~/js/require-config.js"></script>
 
     @RenderSection("scripts", required: false)
 </body>
