Save correct question id and show in edit

--- a/src/QuizH/Views/Exam/Insert.cshtml
+++ b/src/QuizH/Views/Exam/Insert.cshtml
@@ -35,7 +35,7 @@
                             <td data-bind="text: text">
                             </td>
                             <td>
-                                <input type="hidden" data-bind="value: text, attr: { name: 'Questions['+$index()+']'}" />
+                                <input type="hidden" data-bind="value: id, attr: { name: 'Questions['+$index()+']'}" />
                             </td>
                         </tr>
                     </tbody>
