--- a/src/QuizH/Views/Exam/Details.cshtml
+++ b/src/QuizH/Views/Exam/Details.cshtml
@@ -14,6 +14,6 @@
     <div class="col-md-12"><h2>Questions</h2></div>
     @foreach (var question in Model.Questions)
     {
-        <div class="col-md-12">@question</div>
+        <div class="col-md-12">@question.Text</div>
     }
 </div>
