Change to use Insert as edit page

--- a/src/QuizH/Views/Exam/Insert.cshtml
+++ b/src/QuizH/Views/Exam/Insert.cshtml
@@ -23,7 +23,7 @@
             <div class="form-group">
                 <label asp-for="Questions">
                     Questions
-
+                    <input type="hidden" id="preloaded-questions" value="@Json.Serialize(Model.Questions)" />
                 </label>
                 <table>
                     <thead>
