--- a/src/QuizH/Views/Exam/Insert.cshtml
+++ b/src/QuizH/Views/Exam/Insert.cshtml
@@ -2,6 +2,7 @@
 <div class="row">
     <div class="col-md-6">
         <form asp-controller="Exam" asp-action="Insert" method="post">
+            <input class="form-control" asp-for="Id" type="hidden"/>
             <div class="form-group">
                 <label asp-for="Title">
                     Title
@@ -23,7 +24,6 @@
             <div class="form-group">
                 <label asp-for="Questions">
                     Questions
-                    <input type="hidden" id="preloaded-questions" value="@Json.Serialize(Model.Questions)" />
                 </label>
                 <table>
                     <thead>
@@ -65,8 +65,15 @@
 
 @section Scripts {
 
-    @*<script src="~/js/Exam.js" asp-append-version="true"></script>*@
+    <script src="~/js/Exam.js" asp-append-version="true"></script>
     <script type="text/javascript">
-        require(["../js/Exam"])
+        var preloadedQuestions= @Json.Serialize(Model.Questions); 
+
+        //require(["../js/Exam"])
+        $.getJSON("/Question/Get",function (data) {
+            var vm = new ExamsViewModel(data,preloadedQuestions);
+            ko.applyBindings(vm);
+        }
+);
     </script>
 }
