--- a/src/QuizH/Views/Question/Details.cshtml
+++ b/src/QuizH/Views/Question/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model QuizH.ViewModels.ExamDetailsViewModel
+﻿@model QuizH.ViewModels.Exam.ExamDetailsViewModel
 <div class="row">
     <div class="col-md-9"><h1>@Model.Title</h1></div>
 </div>
