--- a/src/QuizH/Views/Exam/Details.cshtml
+++ b/src/QuizH/Views/Exam/Details.cshtml
@@ -17,3 +17,8 @@
         <div class="col-md-12">@question.Text</div>
     }
 </div>
+@using (Html.BeginForm("Download", "ExamController", FormMethod.Post))
+{
+    <input type="hidden" name="ID" value="@Model.Id" />
+    <button type="submit" class="btn btn-default">Scarica</button>
+}
