--- a/src/QuizH/Views/Home/Index.cshtml
+++ b/src/QuizH/Views/Home/Index.cshtml
@@ -35,8 +35,9 @@
     <div class="col-md-6">
         <h3>Domande</h3>
         <ul>
+            <li><a asp-controller="Question" asp-action="Index">Lista domande</a></li>
             <li><a asp-controller="Question" asp-action="Import">Importa domande</a></li>
-        </ul>
+            <li><a asp-controller="Question" asp-action="Insert">Aggiungi una nuova domanda</a></li>
     </div>
     <div class="col-md-6">
         <h3>Esami</h3>
