--- a/src/QuizH/wwwroot/css/site.css
+++ b/src/QuizH/wwwroot/css/site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    font-family: 'Open Sans', sans-serif;
     background-color: hsl(206, 28%, 95%);
     color: hsl(28, 43%, 17%);
 }
