--- a/src/QuizH/Views/Shared/_Layout.cshtml
+++ b/src/QuizH/Views/Shared/_Layout.cshtml
@@ -66,12 +66,9 @@
 
     </environment>
     <script src="~/lib/knockout/dist/knockout.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
-    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-
-    <script>
-        var simplemde = new SimpleMDE({ element: document.getElementsByTagName("textarea")[0] });
-    </script>
+    
+    <script src="//cloud.tinymce.com/stable/tinymce.min.js"></script>
+    <script>tinymce.init({ selector:'textarea' });</script>
 
     @RenderSection("scripts", required: false)
 </body>
