--- a/src/QuizH/Views/Question/Insert.cshtml
+++ b/src/QuizH/Views/Question/Insert.cshtml
@@ -20,9 +20,12 @@
                 <table class="">
                     <tbody data-bind="foreach: answers">
                         <tr>
-                            <td data-bind="text: text"></td>
                             <td>
-                                <input type="hidden" data-bind="value: text, attr: { name: 'Answers['+$index()+']'}" />
+                                <span data-bind="text: text"></span>
+                                <input type="checkbox" data-bind="checked: isCorrect, value: true, attr: { name: 'Answers['+$index()+'].IsCorrect'}" />
+                            </td>
+                            <td>
+                                <input type="hidden" data-bind="value: text, attr: { name: 'Answers['+$index()+'].Text'}" />
                             </td>
                         </tr>
                     </tbody>
@@ -45,7 +48,7 @@
                 <label for="courses">
                     Corsi
                 </label>
-                
+
                 <select class="form-control" id="courses" name="courses" asp-items="@(new MultiSelectList(Model.AvailableCourses, "Id", "Title", Model.Courses))" multiple></select>
             </div>
             <input type="submit" class="btn btn-default" />
@@ -65,15 +68,15 @@
     <script type="text/javascript">
 
         var vm ;
-        var answers = @Json.Serialize(Model.Answers ?? new List<string>());
+        var answers = @Json.Serialize(Model.Answers ?? new List<QuizH.ViewModels.Question.AnswerViewModel>());
         var courses = @Json.Serialize(Model.Courses ?? new List<int>());
         debugger;
-        //$.getJSON("/Question/Get",function (data) {
-            var model = {
-                answers: answers
-            };
-            vm = new QuestionViewModel(model);
-            ko.applyBindings(vm);
-        //}
+
+        var model = {
+            answers: answers
+        };
+        vm = new QuestionViewModel(model);
+        ko.applyBindings(vm);
+
     </script>
 }
