--- a/src/QuizH/Views/Question/Insert.cshtml
+++ b/src/QuizH/Views/Question/Insert.cshtml
@@ -1,4 +1,8 @@
 ﻿@model QuizH.ViewModels.Question.QuestionCreationViewModel
+
+@await Html.PartialAsync("_TextEditor")
+
+
 <div class="row">
     <h2>Creazione Esami</h2>
     <div class="col-md-6">
@@ -36,7 +40,7 @@
                 <!-- /ko -->
                 <input type="button" class="btn btn-default" value="Aggiungi Risposta" data-bind="click: addAnswer" />
                 <input type="text" data-bind="value: newAnswer" />
-
+                <input type="button" class="btn btn-default" value="OpenDialog" onclick="OpenNewAnswer()" />
             </div>
             <div class="form-group">
                 <label for="subjectId">
@@ -65,13 +69,16 @@
 @section Scripts {
 
     <script src="~/js/Question.js" asp-append-version="true"></script>
+
     <script type="text/javascript">
 
         var vm ;
         var answers = @Json.Serialize(Model.Answers ?? new List<QuizH.ViewModels.Question.AnswerViewModel>());
         var courses = @Json.Serialize(Model.Courses ?? new List<int>());
         debugger;
-
+        function OpenNewAnswer() {
+            ModalEditor.openModal(console.debug);
+        }
         var model = {
             answers: answers
         };
