--- a/src/QuizH/Views/Shared/_TextEditor.cshtml
+++ b/src/QuizH/Views/Shared/_TextEditor.cshtml
@@ -14,20 +14,28 @@
                 <textarea id="text-editor"></textarea>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal" onclick="closing()">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="ModalEditor.saving()" data-dismiss="modal">Save changes</button>
             </div>
         </div>
     </div>
 </div>
-   
+
 <script>
-    $('#myModal').modal("show")
-    tinymce.init({ selector: '#text-editor' });
-    function closing(){
-        console.debug("html");
-        console.debug(tinyMCE.activeEditor.getContent());
-        console.debug("raw");
-        console.debug(tinyMCE.activeEditor.getContent({format: 'raw'}));
-    }
+    (function (ModalEditor, $, undefined) {
+        //Private Property
+        var callback;
+
+        //Public Method
+        ModalEditor.openModal = function (call) {
+            $('#myModal').modal("show");
+            callback = call;
+        }
+        ModalEditor.saving = function () {
+            debugger;
+            callback(tinyMCE.activeEditor.getContent({ format: 'raw' }));
+        }
+
+    }(window.ModalEditor = window.ModalEditor || {}, jQuery));
+
 </script>
