Add functioning modal to question editor

--- a/src/QuizH/Views/Question/Insert.cshtml
+++ b/src/QuizH/Views/Question/Insert.cshtml
@@ -77,7 +77,7 @@
         var courses = @Json.Serialize(Model.Courses ?? new List<int>());
         debugger;
         function OpenNewAnswer() {
-            ModalEditor.openModal(console.debug);
+            //ModalEditor.openModal(console.debug);
         }
         var model = {
             answers: answers
